@@ -22,10 +22,8 @@ import org.prebid.server.proto.openrtb.ext.response.BidType;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -33,8 +31,7 @@ import java.util.stream.Collectors;
 
 public class BidscubeBidder implements Bidder<BidRequest> {
 
-    private static final Set<String> POSSIBLE_BID_TYPES = Collections.unmodifiableSet(
-            new HashSet<>(Arrays.asList("banner", "video", "native")));
+    private static final Set<String> POSSIBLE_BID_TYPES = Set.of("banner", "video", "native");
 
     private final String endpointUrl;
     private final JacksonMapper mapper;
